// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<YearMinutes /> Rendering should render the component 1`] = `
<div
  className="year-min"
>
  <Label
    content="2011"
    labelBold={true}
    labelUC={false}
    labelWhite={true}
  />
  <Label
    content="111 min"
    labelBold={true}
    labelUC={false}
    labelWhite={true}
  />
</div>
`;

exports[`<YearMinutes /> Rendering should render the component with default props 1`] = `
<div
  className="year-min"
>
  <Label
    content="unkn"
    labelBold={true}
    labelUC={false}
    labelWhite={true}
  />
  <Label
    content="0 min"
    labelBold={true}
    labelUC={false}
    labelWhite={true}
  />
</div>
`;
